@@ -4,12 +4,12 @@ import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.SignatureAlgorithm;
 import io.jsonwebtoken.security.Keys;
 import jakarta.annotation.PostConstruct;
-import jakarta.servlet.http.Cookie;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.security.Key;
 import java.util.Base64;
 import java.util.Date;
@@ -58,11 +58,7 @@ public class JwtUtil {
 	// JWT Cookie 에 저장
 	public void addJwtToCookie(String token, HttpServletResponse response) throws UnsupportedEncodingException{
 			token = URLEncoder.encode(token, "utf-8").replaceAll("\\+", "%20"); // Cookie Value 에는 공백이 불가능해서 encoding 진행
-
-			Cookie cookie = new Cookie(AUTHORIZATION_HEADER, token); // Name-Value
-			cookie.setPath("/");
-
-			response.addCookie(cookie);
+			response.setHeader(AUTHORIZATION_HEADER, token);
 	}
 
 	// JWT 토큰 substring
@@ -77,15 +73,10 @@ public class JwtUtil {
 		return Jwts.parserBuilder().setSigningKey(key).build().parseClaimsJws(token).getBody().getSubject();
 	}
 
-	// HttpServletRequest 에서 Cookie Value : JWT 가져오기
 	public String getTokenFromRequest(HttpServletRequest req) throws UnsupportedEncodingException{
-		Cookie[] cookies = req.getCookies();
-		if(cookies != null) {
-			for (Cookie cookie : cookies) {
-				if (cookie.getName().equals(AUTHORIZATION_HEADER)) {
-					return URLDecoder.decode(cookie.getValue(), "UTF-8"); // Encode 되어 넘어간 Value 다시 Decode
-				}
-			}
+		String token = req.getHeader(AUTHORIZATION_HEADER);
+		if(token != null) {
+			return URLDecoder.decode(token, StandardCharsets.UTF_8);
 		}
 		return null;
 	}
